September 17 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Capitalization functions of festring are now more flexible
	* Added festring::IgnoreCaseFind() which acts like std::string::find() except
	  that it ignores case
	* Wish parser is no longer case sensitive
	* Added SoCM alias for scroll of change material
	* Position script now allows one to select a random squares inside arbitrary
	  rectangles
	* Added owterrain classes and script entries for New Attnam and the underwater
	  tunnel
	* Added femath::CompareBits() which allows easy ordering of POD objects
	  (but alignment of structure members must be disabled first!)
	* The < operators of graphic_id and configid are now more elegant
	* Saving and loading graphic_id and configid objects is now more elegant

September 14 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Banana peal is now banana peel (why wasn't this typo noticed before?)
	* Wands' inventory entry is now correct
	* Corrected a fatal bug in the lump hit code
	* Completely black carnivorous plants are no longer generated
	* Interlevel transportation code is now a lot better
	* Levels can now have multiple entrances which one may link without restrictions
	* Names consisting only of spaces are now prohibited, and spaces at the end of
	  names are now discarded

September 11 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* The Price of cheap copies of Petrus lowered from 500 to 50. (They aren't THAT sacrate!)
	* Bone changed from two handed weapon to one handed. I belive so, but might need debate.
	* Skull added

September 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected lots of warnings given by gcc compilation
	* The game doesn't generate monsters that can't hurt the player nor can
	  be themselves hurted, like a mammoth against an AV 60 enemy
	* The same applies to monsters which deal a ton a damage but can also be
	  killed really easily, like skeleton warriors
	* Armies of monsters of single type are now a lot less common