@@ -36,3 +36,4 @@ Nuts shouldn't be peeled.
 Teleport.
 
 Fabrick belts and whips seem to not be clearly visible from a wooden parquet. (might have something to do with my red-green color blindness though)
+Small, medium and large chests (one is probably already done...)
