@@ -155,6 +155,7 @@ class bitmap
   void DrawFlames(ushort, ushort = PINK);
   bool IsValidPos(vector2d What) const { return (What.X >= 0 && What.Y >= 0 && What.X < XSize && What.Y < YSize); }
   void CreateSparkle(vector2d, ushort);
+  void CreateFlies(ushort, ulong, ushort);
  protected:
   ushort XSize, YSize;
   bool IsIndependent;
