@@ -16,7 +16,7 @@ AM_PATH_SDL($SDL_VERSION,
 
 CFLAGS="$CFLAGS $SDL_CFLAGS "
 LIBS="$LIBS $SDL_LIBS"
-CPPFLAGS="$SDL_CFLAGS -DDATADIR=\\\"$datadir\\\" -DUSE_SDL=\"1\""
+CPPFLAGS="$SDL_CFLAGS -DDATADIR=\\\"$datadir\\\" -DUSE_SDL -DGCC"
 #"@datadir\@"
 AC_PROG_INSTALL
 
